--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm LekoArts
+# Hello, I'm Vinay Manektalla
 
-I'm a designer durned software engineer and write about JS & React at [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter)
+I'm a Software Engineer with over 7 years experience in both developing applications and leading teams.
