--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,5 @@
 ## About
 
-> I'm Vinay. I've been working as a Software Engineer for over 7 years and over the past 2 years have been leading a team of engineers.
+> I'm Vinay. I'm a self-taught developer and have been working in software development for over 7 years.
 
 Feel free to visit or contact me on one of my socials below:
