--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -29,3 +29,10 @@
 >
   A C++ version of the classic game Hangman
 </ProjectCard>
+<ProjectCard
+  title="Personal Portfolio Page"
+  link="https://github.com/vinayman/vinaymanektalla"
+  bg="linear-gradient(to left, #D4145A 0%, #FBB03B 100%)"
+>
+  Cloned and edited from an already available repo on GitHub. This project primarily uses Gatsby and React.
+</ProjectCard>
