--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -23,6 +23,13 @@
   A smart contract token written in Solidity for the Binance Smart Chain (BSC)
 </ProjectCard>
 <ProjectCard
+  title="Helicopter Game written in Go"
+  link="https://github.com/vinayman/helicopter-go/"
+  bg="linear-gradient(to right, #0030A1 0%, #8E94A3 100%)"
+>
+  An implementation of the popular Helicopter game written in Go using the terminal-based game engine termloop.
+</ProjectCard>
+<ProjectCard
   title="Hangman in C++"
   link="https://github.com/vinayman/hangman"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
